Command Rework & Database Fixes & more